--- a/application/frontend/src/styles/ChatBox.css
+++ b/application/frontend/src/styles/ChatBox.css
@@ -1,5 +1,3 @@
-/* Import Inter font for consistent typography */
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
 
 /* Main chat box wrapper */
 .chatBox-container {
@@ -125,13 +123,11 @@
 
 /* Right-aligned messages (user's own messages) */
 .current-user {
-    /* color: #FFC107; */
     text-align: right;
 }
 
 /* Left-aligned messages (other user's messages) */
 .other-user {
-    /* color: gray; */
     text-align: left;
 }
 
@@ -142,15 +138,6 @@
     color: #888;
     padding: 5px 10px;
     margin-top: 5px;
-
-    /* Remove position: absolute */
-    /* position: absolute; */
-    /* bottom: 0; */
-    /* left: 40%; */
-    /* width: 100%; */
-    /* text-align: left; */
-
-    /* Add flexbox to keep it at the bottom */
-    align-self: flex-start; /* Align to the left */
-    width: 100%; /* Ensure it spans the width */
+    align-self: flex-start;
+    width: 100%;
 }
