--- a/application/frontend/src/styles/ProfileBox.css
+++ b/application/frontend/src/styles/ProfileBox.css
@@ -1,4 +1,3 @@
-
 .profile-container {
   overflow: hidden;
   display: flex;
@@ -709,7 +708,7 @@ span.star,
   cursor: pointer;
 }
 
-.profile-box button-container {
+.profile-box-button-container {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -781,6 +780,7 @@ span.star,
   overflow-x: hidden !important;
   display: -webkit-box !important;
   -webkit-box-orient: vertical !important;
+  /*what*/
   -webkit-line-clamp: 3 !important;
   word-wrap: break-word !important;
   white-space: normal !important;
